--- a/src/views/rooms.ejs
+++ b/src/views/rooms.ejs
@@ -81,8 +81,8 @@
                 </section>
 
                 <!-- TODO: Fix form info -->
-                <form method="POST" id="new_room_form" action="/login" enctype="multipart/form-data">
-                    <label for="username">
+                <form method="POST" id="new_room_form" action="/rooms/new" enctype="multipart/form-data">
+                    <label for="name">
                         <h3>Name</h3>
                         <input type="text" name="name" required>
                     </label>
