Worked on rendering better data

--- a/src/views/single_collection.ejs
+++ b/src/views/single_collection.ejs
@@ -1,5 +1,5 @@
 <html>
-
+    <%- include head.ejs %>
 <section class="single_collection">
 
     <div id="top">
@@ -29,10 +29,10 @@
                 <h5>Total Volume:</h5>
                 <p><%= collection.total_volume %></p>
             </ul>
-            <div>
+            <!-- <div>
                 <h5>Floor Price:</h5>
                 <p><%= collection.floor_price %></p>
-            </div>
+            </div> -->
             <div>
                 <h5>Average Price:</h5>
                 <p><%= collection.average_price %></p>
