--- a/src/views/profile.ejs
+++ b/src/views/profile.ejs
@@ -7,7 +7,7 @@
             <section id="user_info_area">
 
                 <div id="pic_and_username">
-                    <img id="ppic" src="<%= user.ppic %>">
+                    <img id="ppic" src="<%= pngUrl(user.ppic) %>">
                     <h1>
                         <%= user.username %>
                     </h1>
